chore: add SEO meta tags, robots.txt, sitemap.xml, and GSC verification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,34 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
   <title>Ashish Kumar | Portfolio</title>
+  <meta name="title" content="Ashish Kumar | Portfolio" />
+  <meta name="description"
+    content="Portfolio of Ashish Kumar, an MCA student and Tech Enthusiast specializing in web development and data operations." />
+  <meta name="keywords"
+    content="Ashish Kumar, Portfolio, Web Development, MCA Student, Tech Enthusiast, React Developer" />
+  <meta name="author" content="Ashish Kumar" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.ashishkr.in/" />
+  <meta property="og:title" content="Ashish Kumar | Portfolio" />
+  <meta name="description"
+    content="Portfolio of Ashish Kumar, an MCA student and Tech Enthusiast specializing in web development and data operations." />
+  <meta property="og:image" content="https://www.ashishkr.in/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.ashishkr.in/" />
+  <meta property="twitter:title" content="Ashish Kumar | Portfolio" />
+  <meta property="twitter:description"
+    content="Portfolio of Ashish Kumar, an MCA student and Tech Enthusiast specializing in web development and data operations." />
+  <meta property="twitter:image" content="https://www.ashishkr.in/og-image.png" />
+
+  <!-- Google Search Console Verification -->
+  <meta name="google-site-verification" content="EdJJ9amLUr2lvvOIkey3LTyzH-gX-OOJgwUQT_kTGUk" />
 </head>
 
 <body>
